# telegram-bot

./: .gitignore  Makefile  README.md  env_file  main.py  pyproject.toml  requirements.txt
tel_bot/: api.py  config.py  contants.py  database.py  main.py  models.py  requirements.txt  schemas.py  utils.py
tel_bot/carts/: models.py  router.py  shemas.py
tel_bot/ms_api/: models.py  router.py  utils.py
tel_bot/users/: models.py  pass_conf.py  router.py  shemas.py  token_jwt.py  utils.py
tests/carts/: test_cart.py
tests/ms_api/: test_ms_api.py
tests/users/: test_users.py
